# DELETE-THIS-mail-common

./: Cargo.toml  README.md
src/: error.rs  grammar.rs  lib.rs  macros.rs  mail_type.rs
src/bind/: base64.rs  idna.rs  mod.rs  quoted_printable.rs
src/bind/encoded_word/: impls.rs  mod.rs
src/codec/: base64.rs  encoder.rs  idna.rs  mod.rs  quoted_printable.rs  traits.rs  transfer_encoding.rs
src/components/: mod.rs
src/data/: input.rs
src/encoder/: body.rs  encodable.rs  mod.rs  trace.rs
src/header/: header_macro.rs  mod.rs
src/header/map/: into_iter.rs  mod.rs
src/headers/: header_macro.rs  mod.rs
src/headers/map/: mod.rs
src/utils/: file_meta.rs  mod.rs
