[package]
authors = ["Philipp Korber <p.korber@1aim.com>"]
name = "mail-common"
description = "TODO"
documentation = "https://docs.rs/mail-common"
keywords = []
categories = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/1aim/mail-codec"
version = "0.0.1"


[dependencies]
failure = "0.1.1"
nom = "3.1.0"
chrono = "0.4.0"
base64 = "0.6.0"
quoted_printable = "0.4.0"
idna = "0.1.4"
percent-encoding = "1.0.0"
quoted-string = { git="https://github.com/1aim/quoted-string", version="0.5"}
media-type-impl-utils = { git="https://github.com/1aim/media-type-impl-utils" }
soft-ascii-string = "0.2"
vec1 = { git="https://github.com/1aim/vec1" }

[dependencies.mime]
git="https://github.com/1aim/mime"
branch="parser_revamp"
features=["expose-param-utils"]
version="0.4.0"


[features]
default = []
traceing = []
