[package]
authors = ["Philipp Korber <p.korber@1aim.com>"]
name = "mail-common"
description = "[internal/mail-api] common parts for the mail-api crates (inkl. grammar, encoding buffer)"
documentation = "https://docs.rs/mail-common"
keywords = ["mail-api"]
categories = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/1aim/mail-common"
version = "0.2.0"


[dependencies]
failure = "0.1.1"
nom = "3.1.0"
chrono = "0.4.0"
base64 = "0.6.0"
quoted_printable = "0.4.0"
idna = "0.1.4"
percent-encoding = "1.0.0"
quoted-string = { git="https://github.com/1aim/quoted-string", version="0.5"}
media-type-impl-utils = { git="https://github.com/1aim/media-type-impl-utils" }
soft-ascii-string = "1.0"
vec1 = "1.0"

[dependencies.mime]
git="https://github.com/1aim/mime"
branch="parser_revamp"
features=["expose-param-utils"]
version="0.4.0"


[features]
default = []
traceing = []
